--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,3 +1,9 @@
-<p>
-  category works!
-</p>
+<div *ngFor="let post of postsToDisplay" class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">{{post.title}}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">by {{post.username}}</h6>
+    <p class="card-text">{{post.body}}</p>
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
